# payload_extract_rs

./: Cargo.toml  README.md  build.rs
.commandcode/taste/: taste.md
.github/workflows/: build.yml
src/: error.rs  lib.rs  main.rs  ota_metadata.rs  style.rs
src/commands/: extract.rs  list.rs  metadata.rs  mod.rs  ota_metadata.rs  verify.rs
src/extract/: bufpool.rs  decompress.rs  fec.rs  lz4diff.rs  mod.rs  operation.rs  verify.rs  verify_update.rs  writer.rs
src/input/: http.rs  local.rs  mod.rs  zip_input.rs
src/payload/: header.rs  mod.rs
src/proto/: mod.rs
